# funcflow-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/funcflow/: context_view.hpp  context_view_concepts.hpp  context_view_iterator.hpp  context_view_range.hpp  dual_range.hpp  pipeline.hpp  pipeline_stage.hpp  scheduler.hpp  stage_builder.hpp  task_utils.hpp  visitor_concepts.hpp  visitor_runner.hpp
include/funcflow/utils/: flags.hpp
tests/: CMakeLists.txt  test_flags.cpp  test_scheduler.cpp  test_workflow.cpp
